[workspace]
members = [
    "./packages/scriptplan/rust/cli",
    "./packages/scriptplan/rust/core",
    "./packages/scriptplan/rust/bash",
    "./packages/cinder/rust/core",
]

exclude = [
    "./packages/patrick-shaw/rust/spot-welder-arduino",
    "./packages/patrick-shaw/rust/lifepo4-cell-charger",
]
